<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meeting_fields_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEFF0"
    tools:context=".ui.meeting_list.AddMeetingActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:drawableStart="@drawable/ic_baseline_calendar_month_24"
                    android:drawableTint="@color/colorAccent"
                    android:drawablePadding="12dp"
...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_subject_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/meeting_second_title"
                    android:inputType="textShortMessage"
                    android:imeOptions="actionDone" />
...
                    android:id="@+id/radioGroup_1_to_5"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meeting_detail_location_room">

                    <RadioButton
                        android:id="@+id/radioButton_room1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Peach"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radioButton_room2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mario" />

                    <RadioButton
                        android:id="@+id/radioButton_room3"
...
                    android:imeOptions="actionDone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_participants_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:maxLines="1"
                        android:hint="@string/add_member"
                        android:imeOptions="actionDone"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="2"
                        android:minLines="2"
                        android:ems="10"
                        android:hint="@string/meeting_description_text"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_description_layout"
                app:layout_constraintBottom_toTopOf="@+id/create"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/add_meeting_color_text"
                    android:layout_width="wrap_content"
...
