...

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_meetings"
            android:name="com.openclassrooms.mareu.ui.meeting_list.MeetingFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/appbar"
...
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/list_meetings"
        android:visibility="gone"
        android:gravity="center" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:foregroundTint="#FFFFFF"
        app:backgroundTint="@color/colorRed"
...
